cmake_minimum_required(VERSION 3.0.0)
project(SIM VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()
file(GLOB_RECURSE SRC_FILES Source\ Files/*.cpp)
add_executable(SIM ${SRC_FILES})
target_include_directories(SIM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Header\ Files)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
